--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "debug": "~2.1.1",
     "ejs": "^2.5.5",
-    "express": "~4.11.0"
+    "express": "~4.11.0",
+	"socket.io": "^1.3.2"
   }
 }
